exports[`no-incomplete-accessor-override > invalid(1): class Base { get value() { return 1; } } class Child extends Base { set value(value) {} } 1`] = `

  1 | class Base { get value() { return 1; } } class Child extends Base { set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(1): class Base { get value() { return 1; } } class Child extends Base { set value(value) {} } 2`] = `

Message:
> 1 | class Base { get value() { return 1; } } class Child extends Base { set value(value) {} }
    |                                                                         ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(1): class Base { get value(): number { return 1; } } class Child extends Base { override set value(value: number) {} } 1`] = `

  1 | class Base { get value(): number { return 1; } } class Child extends Base { override set value(value: number) {} }

`;

exports[`no-incomplete-accessor-override > invalid(1): class Base { get value(): number { return 1; } } class Child extends Base { override set value(value: number) {} } 2`] = `

Message:
> 1 | class Base { get value(): number { return 1; } } class Child extends Base { override set value(value: number) {} }
    |                                                                                          ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(10): class Base { get value() { return 1; } } class Child extends Base { value() {} set value(value) {} } 1`] = `

  1 | class Base { get value() { return 1; } } class Child extends Base { value() {} set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(10): class Base { get value() { return 1; } } class Child extends Base { value() {} set value(value) {} } 2`] = `

Message:
> 1 | class Base { get value() { return 1; } } class Child extends Base { value() {} set value(value) {} }
    |                                                                                    ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(11): class Base { get value() { return 1; } } { class Base { set value(value) {} } class Child extends Base { get value() { return 2; } } } 1`] = `

  1 | class Base { get value() { return 1; } } { class Base { set value(value) {} } class Child extends Base { get value() { return 2; } } }

`;

exports[`no-incomplete-accessor-override > invalid(11): class Base { get value() { return 1; } } { class Base { set value(value) {} } class Child extends Base { get value() { return 2; } } } 2`] = `

Message:
> 1 | class Base { get value() { return 1; } } { class Base { set value(value) {} } class Child extends Base { get value() { return 2; } } }
    |                                                                                                              ^^^^^ This getter hides the inherited setter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(12): class Base { get value() { return 1; } } class Middle extends Base { set value(value) {} } class Child extends Middle { get value() { return 2; } } 1`] = `

  1 | class Base { get value() { return 1; } } class Middle extends Base { set value(value) {} } class Child extends Middle { get value() { return 2; } }

`;

exports[`no-incomplete-accessor-override > invalid(12): class Base { get value() { return 1; } } class Middle extends Base { set value(value) {} } class Child extends Middle { get value() { return 2; } } 2`] = `

Message:
> 1 | class Base { get value() { return 1; } } class Middle extends Base { set value(value) {} } class Child extends Middle { get value() { return 2; } }
    |                                                                          ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(12): class Base { get value() { return 1; } } class Middle extends Base { set value(value) {} } class Child extends Middle { get value() { return 2; } } 3`] = `

Message:
> 1 | class Base { get value() { return 1; } } class Middle extends Base { set value(value) {} } class Child extends Middle { get value() { return 2; } }
    |                                                                                                                             ^^^^^ This getter hides the inherited setter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(13): class Base { get value() { return 1; } } class Middle extends Base { set value(value) {} } class Child extends Middle { set value(value) {} } 1`] = `

  1 | class Base { get value() { return 1; } } class Middle extends Base { set value(value) {} } class Child extends Middle { set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(13): class Base { get value() { return 1; } } class Middle extends Base { set value(value) {} } class Child extends Middle { set value(value) {} } 2`] = `

Message:
> 1 | class Base { get value() { return 1; } } class Middle extends Base { set value(value) {} } class Child extends Middle { set value(value) {} }
    |                                                                          ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(14): class Base { static get value() { return 1; } } class Child extends Base { static set value(value) {} } 1`] = `

  1 | class Base { static get value() { return 1; } } class Child extends Base { static set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(14): class Base { static get value() { return 1; } } class Child extends Base { static set value(value) {} } 2`] = `

Message:
> 1 | class Base { static get value() { return 1; } } class Child extends Base { static set value(value) {} }
    |                                                                                       ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(15): class Base { static get constructor() { return 1; } } class Child extends Base { static set constructor(value) {} } 1`] = `

  1 | class Base { static get constructor() { return 1; } } class Child extends Base { static set constructor(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(15): class Base { static get constructor() { return 1; } } class Child extends Base { static set constructor(value) {} } 2`] = `

Message:
> 1 | class Base { static get constructor() { return 1; } } class Child extends Base { static set constructor(value) {} }
    |                                                                                             ^^^^^^^^^^^ This setter hides the inherited getter for \`constructor\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(16): const Base = class { get value() { return 1; } }; class Child extends Base { set value(value) {} } 1`] = `

  1 | const Base = class { get value() { return 1; } }; class Child extends Base { set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(16): const Base = class { get value() { return 1; } }; class Child extends Base { set value(value) {} } 2`] = `

Message:
> 1 | const Base = class { get value() { return 1; } }; class Child extends Base { set value(value) {} }
    |                                                                                  ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(17): const Base = class { get value() { return 1; } }; const alias = Base; class Child extends alias { set value(value) {} } 1`] = `

  1 | const Base = class { get value() { return 1; } }; const alias = Base; class Child extends alias { set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(17): const Base = class { get value() { return 1; } }; const alias = Base; class Child extends alias { set value(value) {} } 2`] = `

Message:
> 1 | const Base = class { get value() { return 1; } }; const alias = Base; class Child extends alias { set value(value) {} }
    |                                                                                                       ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(18): const Base = class { get value() { return 1; } }; const first = Base; const second = first; class Child extends second { set value(value) {} } 1`] = `

  1 | const Base = class { get value() { return 1; } }; const first = Base; const second = first; class Child extends second { set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(18): const Base = class { get value() { return 1; } }; const first = Base; const second = first; class Child extends second { set value(value) {} } 2`] = `

Message:
> 1 | const Base = class { get value() { return 1; } }; const first = Base; const second = first; class Child extends second { set value(value) {} }
    |                                                                                                                              ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(19): class Child extends (class { get value() { return 1; } }) { set value(value) {} } 1`] = `

  1 | class Child extends (class { get value() { return 1; } }) { set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(19): class Child extends (class { get value() { return 1; } }) { set value(value) {} } 2`] = `

Message:
> 1 | class Child extends (class { get value() { return 1; } }) { set value(value) {} }
    |                                                                 ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(2): class Base { get value(): number { return 1; } } class Child extends Base { set value(value: number) {} } 1`] = `

  1 | class Base { get value(): number { return 1; } } class Child extends Base { set value(value: number) {} }

`;

exports[`no-incomplete-accessor-override > invalid(2): class Base { get value(): number { return 1; } } class Child extends Base { set value(value: number) {} } 2`] = `

Message:
> 1 | class Base { get value(): number { return 1; } } class Child extends Base { set value(value: number) {} }
    |                                                                                 ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(2): class Base { set value(value) {} } class Child extends Base { get value() { return 1; } } 1`] = `

  1 | class Base { set value(value) {} } class Child extends Base { get value() { return 1; } }

`;

exports[`no-incomplete-accessor-override > invalid(2): class Base { set value(value) {} } class Child extends Base { get value() { return 1; } } 2`] = `

Message:
> 1 | class Base { set value(value) {} } class Child extends Base { get value() { return 1; } }
    |                                                                   ^^^^^ This getter hides the inherited setter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(20): class Base { get first() { return 1; } get second() { return 2; } } class Child extends Base { set first(value) {} set second(value) {} } 1`] = `

  1 | class Base { get first() { return 1; } get second() { return 2; } } class Child extends Base { set first(value) {} set second(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(20): class Base { get first() { return 1; } get second() { return 2; } } class Child extends Base { set first(value) {} set second(value) {} } 2`] = `

Message:
> 1 | class Base { get first() { return 1; } get second() { return 2; } } class Child extends Base { set first(value) {} set second(value) {} }
    |                                                                                                    ^^^^^ This setter hides the inherited getter for \`first\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(20): class Base { get first() { return 1; } get second() { return 2; } } class Child extends Base { set first(value) {} set second(value) {} } 3`] = `

Message:
> 1 | class Base { get first() { return 1; } get second() { return 2; } } class Child extends Base { set first(value) {} set second(value) {} }
    |                                                                                                                        ^^^^^^ This setter hides the inherited getter for \`second\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(21): const name = \"value\"; class Base { get [name]() { return 1; } } class Child extends Base { set value(value) {} } 1`] = `

  1 | const name = "value"; class Base { get [name]() { return 1; } } class Child extends Base { set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(21): const name = \"value\"; class Base { get [name]() { return 1; } } class Child extends Base { set value(value) {} } 2`] = `

Message:
> 1 | const name = "value"; class Base { get [name]() { return 1; } } class Child extends Base { set value(value) {} }
    |                                                                                                ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(22): class Base { get [\"value\"]() { return 1; } } class Child extends Base { set value(value) {} } 1`] = `

  1 | class Base { get ["value"]() { return 1; } } class Child extends Base { set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(22): class Base { get [\"value\"]() { return 1; } } class Child extends Base { set value(value) {} } 2`] = `

Message:
> 1 | class Base { get ["value"]() { return 1; } } class Child extends Base { set value(value) {} }
    |                                                                             ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(23): class Base { get 1() { return 1; } } class Child extends Base { set [1](value) {} } 1`] = `

  1 | class Base { get 1() { return 1; } } class Child extends Base { set [1](value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(23): class Base { get 1() { return 1; } } class Child extends Base { set [1](value) {} } 2`] = `

Message:
> 1 | class Base { get 1() { return 1; } } class Child extends Base { set [1](value) {} }
    |                                                                      ^ This setter hides the inherited getter for \`1\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(24): class Base { get [null]() { return 1; } } class Child extends Base { set null(value) {} } 1`] = `

  1 | class Base { get [null]() { return 1; } } class Child extends Base { set null(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(24): class Base { get [null]() { return 1; } } class Child extends Base { set null(value) {} } 2`] = `

Message:
> 1 | class Base { get [null]() { return 1; } } class Child extends Base { set null(value) {} }
    |                                                                          ^^^^ This setter hides the inherited getter for \`null\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(25): class Base {\n\tget value() {\n\t\treturn 1;\n\t}\n}\n\nclass Child extends Base {\n\tset value(value) {}\n} 1`] = `

  1 | class Base {
  2 | 	get value() {
  3 | 		return 1;
  4 | 	}
  5 | }
  6 |
  7 | class Child extends Base {
  8 | 	set value(value) {}
  9 | }

`;

exports[`no-incomplete-accessor-override > invalid(25): class Base {\n\tget value() {\n\t\treturn 1;\n\t}\n}\n\nclass Child extends Base {\n\tset value(value) {}\n} 2`] = `

Message:
  1 | class Base {
  2 | 	get value() {
  3 | 		return 1;
  4 | 	}
  5 | }
  6 |
  7 | class Child extends Base {
> 8 | 	set value(value) {}
    | 	    ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.
  9 | }

`;

exports[`no-incomplete-accessor-override > invalid(3): class Base { [key: string]: unknown; get value() { return 1; } } class Child extends Base { set value(value: number) {} } 1`] = `

  1 | class Base { [key: string]: unknown; get value() { return 1; } } class Child extends Base { set value(value: number) {} }

`;

exports[`no-incomplete-accessor-override > invalid(3): class Base { [key: string]: unknown; get value() { return 1; } } class Child extends Base { set value(value: number) {} } 2`] = `

Message:
> 1 | class Base { [key: string]: unknown; get value() { return 1; } } class Child extends Base { set value(value: number) {} }
    |                                                                                                 ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(3): class Base { get value() { return 1; } set value(value) {} } class Child extends Base { set value(value) {} } 1`] = `

  1 | class Base { get value() { return 1; } set value(value) {} } class Child extends Base { set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(3): class Base { get value() { return 1; } set value(value) {} } class Child extends Base { set value(value) {} } 2`] = `

Message:
> 1 | class Base { get value() { return 1; } set value(value) {} } class Child extends Base { set value(value) {} }
    |                                                                                             ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(4): class Base { accessor value = 1; } class Child extends Base { get value() { return 2; } } 1`] = `

  1 | class Base { accessor value = 1; } class Child extends Base { get value() { return 2; } }

`;

exports[`no-incomplete-accessor-override > invalid(4): class Base { accessor value = 1; } class Child extends Base { get value() { return 2; } } 2`] = `

Message:
> 1 | class Base { accessor value = 1; } class Child extends Base { get value() { return 2; } }
    |                                                                   ^^^^^ This getter hides the inherited setter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(4): class Base { get value() { return 1; } set value(value) {} } class Child extends Base { get value() { return 2; } } 1`] = `

  1 | class Base { get value() { return 1; } set value(value) {} } class Child extends Base { get value() { return 2; } }

`;

exports[`no-incomplete-accessor-override > invalid(4): class Base { get value() { return 1; } set value(value) {} } class Child extends Base { get value() { return 2; } } 2`] = `

Message:
> 1 | class Base { get value() { return 1; } set value(value) {} } class Child extends Base { get value() { return 2; } }
    |                                                                                             ^^^^^ This getter hides the inherited setter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(5): class Base { get value() { return 1; } } class Middle extends Base {} class Child extends Middle { set value(value) {} } 1`] = `

  1 | class Base { get value() { return 1; } } class Middle extends Base {} class Child extends Middle { set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(5): class Base { get value() { return 1; } } class Middle extends Base {} class Child extends Middle { set value(value) {} } 2`] = `

Message:
> 1 | class Base { get value() { return 1; } } class Middle extends Base {} class Child extends Middle { set value(value) {} }
    |                                                                                                        ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(5): class Base { static accessor value = 1; } class Child extends Base { static set value(value: number) {} } 1`] = `

  1 | class Base { static accessor value = 1; } class Child extends Base { static set value(value: number) {} }

`;

exports[`no-incomplete-accessor-override > invalid(5): class Base { static accessor value = 1; } class Child extends Base { static set value(value: number) {} } 2`] = `

Message:
> 1 | class Base { static accessor value = 1; } class Child extends Base { static set value(value: number) {} }
    |                                                                                 ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(6): class Base { [Symbol.iterator]() {} get value() { return 1; } } class Child extends Base { set value(value) {} } 1`] = `

  1 | class Base { [Symbol.iterator]() {} get value() { return 1; } } class Child extends Base { set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(6): class Base { [Symbol.iterator]() {} get value() { return 1; } } class Child extends Base { set value(value) {} } 2`] = `

Message:
> 1 | class Base { [Symbol.iterator]() {} get value() { return 1; } } class Child extends Base { set value(value) {} }
    |                                                                                                ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(6): class Base { get value() { return 1; } } class Middle extends Base { declare value: number; } class Child extends Middle { set value(value: number) {} } 1`] = `

  1 | class Base { get value() { return 1; } } class Middle extends Base { declare value: number; } class Child extends Middle { set value(value: number) {} }

`;

exports[`no-incomplete-accessor-override > invalid(6): class Base { get value() { return 1; } } class Middle extends Base { declare value: number; } class Child extends Middle { set value(value: number) {} } 2`] = `

Message:
> 1 | class Base { get value() { return 1; } } class Middle extends Base { declare value: number; } class Child extends Middle { set value(value: number) {} }
    |                                                                                                                                ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(7): class Base { get value() { return 1; } } class Child extends Base { [Symbol.iterator]() {} set value(value) {} } 1`] = `

  1 | class Base { get value() { return 1; } } class Child extends Base { [Symbol.iterator]() {} set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(7): class Base { get value() { return 1; } } class Child extends Base { [Symbol.iterator]() {} set value(value) {} } 2`] = `

Message:
> 1 | class Base { get value() { return 1; } } class Child extends Base { [Symbol.iterator]() {} set value(value) {} }
    |                                                                                                ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(7): class Base { get value() { return 1; } } class Middle extends Base { value(): void; } class Child extends Middle { set value(value: number) {} } 1`] = `

  1 | class Base { get value() { return 1; } } class Middle extends Base { value(): void; } class Child extends Middle { set value(value: number) {} }

`;

exports[`no-incomplete-accessor-override > invalid(7): class Base { get value() { return 1; } } class Middle extends Base { value(): void; } class Child extends Middle { set value(value: number) {} } 2`] = `

Message:
> 1 | class Base { get value() { return 1; } } class Middle extends Base { value(): void; } class Child extends Middle { set value(value: number) {} }
    |                                                                                                                        ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(8): class Base { get value() { return 1; } } class Middle extends Base { get value() { return 2; } set value(value) {} } class Child extends Middle { get value() { return 3; } } 1`] = `

  1 | class Base { get value() { return 1; } } class Middle extends Base { get value() { return 2; } set value(value) {} } class Child extends Middle { get value() { return 3; } }

`;

exports[`no-incomplete-accessor-override > invalid(8): class Base { get value() { return 1; } } class Middle extends Base { get value() { return 2; } set value(value) {} } class Child extends Middle { get value() { return 3; } } 2`] = `

Message:
> 1 | class Base { get value() { return 1; } } class Middle extends Base { get value() { return 2; } set value(value) {} } class Child extends Middle { get value() { return 3; } }
    |                                                                                                                                                       ^^^^^ This getter hides the inherited setter for \`value\`. Define both accessors in this class.

`;

exports[`no-incomplete-accessor-override > invalid(9): class Base { value() {} get value() { return 1; } } class Child extends Base { set value(value) {} } 1`] = `

  1 | class Base { value() {} get value() { return 1; } } class Child extends Base { set value(value) {} }

`;

exports[`no-incomplete-accessor-override > invalid(9): class Base { value() {} get value() { return 1; } } class Child extends Base { set value(value) {} } 2`] = `

Message:
> 1 | class Base { value() {} get value() { return 1; } } class Child extends Base { set value(value) {} }
    |                                                                                    ^^^^^ This setter hides the inherited getter for \`value\`. Define both accessors in this class.

`;
